--- a/InventoryManagementUI/Views/Home/Index.cshtml
+++ b/InventoryManagementUI/Views/Home/Index.cshtml
@@ -4,7 +4,17 @@
 }
 
 <h2>Index</h2>
-<ul>
- 
+<ul></ul>
 
-</ul>
+<!--Test-->
+@using (Html.BeginForm("StaffAdd", "Home", FormMethod.Post))
+{
+    <input type="text" name="Name" value="" />
+    <input type="text" name="Surname" value="" />
+    <input type="text" name="Username" value="" />
+    <input type="tel" name="Phone" value="" />
+    <input type="text" name="Department" value="" />
+    <input type="text" name="Task" value="" />
+    <input type="password" name="Password" value="" />
+    <input type="submit" name="name" value="Kaydol" />
+}
