--- a/InventoryManagementUI/Views/Company/Index.cshtml
+++ b/InventoryManagementUI/Views/Company/Index.cshtml
@@ -1,8 +1,98 @@
-﻿
+﻿@model IEnumerable<InventoryManagementEntity.Staff>
 @{
     Layout = "~/Views/Shared/_CompanyLayout.cshtml";
 }
 
+<div class="row row-sm mg-b-20">
+    <div class="col-sm-6 col-xl-3">
+        <div class="bg-info rounded overflow-hidden">
+            <div class="pd-x-20 pd-t-20 d-flex align-items-center">
+                <i class="ion ion-earth tx-60 lh-0 tx-white op-7"></i>
+                <div class="mg-l-20">
+                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Staff</p>
+                    <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@Model.Count()</p>
+                    <span class="tx-11 tx-roboto tx-white-8"></span>
+                </div>
+            </div>
+            <div id="ch1" class="ht-50 tr-y-1 rickshaw_graph"></div>
+        </div>
+    </div><!-- col-3 -->
+    <div class="col-sm-6 col-xl-3 mg-t-20 mg-sm-t-0">
+        <div class="bg-purple rounded overflow-hidden">
+            <div class="pd-x-20 pd-t-20 d-flex align-items-center">
+                <i class="ion ion-bag tx-60 lh-0 tx-white op-7"></i>
+                <div class="mg-l-20">
+                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Product</p>
+                    <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@ViewBag.ProductCount</p>
+                    <span class="tx-11 tx-roboto tx-white-8"></span>
+                </div>
+            </div>
+            <div id="ch3" class="ht-50 tr-y-1 rickshaw_graph"></div>
+        </div>
+    </div><!-- col-3 -->
+    <div class="col-sm-6 col-xl-3 mg-t-20 mg-xl-t-0">
+        <div class="bg-teal rounded overflow-hidden">
+            <div class="pd-x-20 pd-t-20 d-flex align-items-center">
+                <i class="ion ion-monitor tx-60 lh-0 tx-white op-7"></i>
+                <div class="mg-l-20">
+                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">All Product</p>
+                    <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">54.45%</p>
+                    <span class="tx-11 tx-roboto tx-white-8"></span>
+                </div>
+            </div>
+            <div id="ch2" class="ht-50 tr-y-1 rickshaw_graph"></div>
+        </div>
+    </div><!-- col-3 -->
+    <div class="col-sm-6 col-xl-3 mg-t-20 mg-xl-t-0">
+        <div class="bg-primary rounded overflow-hidden">
+            <div class="pd-x-20 pd-t-20 d-flex align-items-center">
+                <i class="ion ion-clock tx-60 lh-0 tx-white op-7"></i>
+                <div class="mg-l-20">
+                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Sold product</p>
+                    <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">32.16%</p>
+                    <span class="tx-11 tx-roboto tx-white-8"></span>
+                </div>
+            </div>
+            <div id="ch4" class="ht-50 tr-y-1 rickshaw_graph"></div>
+        </div>
+    </div><!-- col-3 -->
+</div>
 
-<h4>Blank Page (Default Layout)</h4>
-<p class="mg-b-0">Introducing Bracket Plus admin template, the most handsome admin template of all time.</p>
+<div class="br-section-wrapper">
+    <h6 class="br-section-label">Staff DataTable</h6> <div class="w-25">@Html.ActionLink("Create New Staff","CreateStaff","Company",new {@class= "btn btn-success" })</div>
+    <div class="table-wrapper">
+        <table id="datatable1" class="table display responsive nowrap dataTable no-footer dtr-inline" role="grid" aria-describedby="datatable1_info" style="width: 935px;">
+            <thead>
+                <tr role="row"><th class="wd-15p sorting_asc" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 112px;" aria-sort="ascending" aria-label="First name: activate to sort column descending">Name</th><th class="wd-15p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 113px;" aria-label="Last name: activate to sort column ascending">Surname</th><th class="wd-20p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 175px;" aria-label="Position: activate to sort column ascending">Username</th><th class="wd-15p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 114px;" aria-label="Start date: activate to sort column ascending">Department</th><th class="wd-10p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 69px;" aria-label="Salary: activate to sort column ascending">Task</th><th class="wd-25p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 208px;" aria-label="E-mail: activate to sort column ascending">Phone</th></tr>
+            </thead>
+            <tbody>
+                @foreach (var staff in Model)
+                {
+                    <tr role="row" class="odd">
+                        <td class="sorting_1" tabindex="0">@staff.Name</td>
+                        <td>@staff.Surname</td>
+                        <td> @staff.Username</td>
+                        <td>@staff.Department</td>
+                        <td>@staff.Task</td>
+                        <td>@staff.Phone</td>
+                    </tr>
+                }
+
+
+            </tbody>
+        </table>
+    </div>
+</div><!-- table-wrapper -->
+</div>
+<script>
+
+
+    $('#datatable1').DataTable({
+        responsive: true,
+        language: {
+            searchPlaceholder: 'Search...',
+            sSearch: '',
+            lengthMenu: '_MENU_ items/page',
+        }
+    });
+</script>
