--- a/InventoryManagementUI/Views/Menu/Menus.cshtml
+++ b/InventoryManagementUI/Views/Menu/Menus.cshtml
@@ -4,14 +4,15 @@
 
 @foreach (var menu in Model)
 {
-   
 
 
-<li class="br-menu-item">
-    <a href="@menu.Name" class="br-menu-link">
-        <i class="menu-item-icon icon ion-ios-home-outline tx-24"></i>
-        <span class="menu-item-label">@menu.Name</span>
-    </a>
-    <!-- br-menu-link-->
+
+    <li class="br-menu-item">
+        <a href="@menu.Link" class="br-menu-link">
+            <i class="flaticon-@menu.Name icon icon-24 tx-28"></i>
+            <span class="menu-item-label tx-18">@menu.Name</span>
+        </a>
+        <!-- br-menu-link-->
+
     </li><!-- br-menu-item -->
 }
