--- a/InventoryManagementUI/Content/fontIcon/flaticon.css
+++ b/InventoryManagementUI/Content/fontIcon/flaticon.css
@@ -1,12 +1,13 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 26/12/2017 23:12
+  	Creation date: 03/03/2019 15:34
   	*/
 
 @font-face {
   font-family: "Flaticon";
   src: url("./Flaticon.eot");
   src: url("./Flaticon.eot?#iefix") format("embedded-opentype"),
+       url("./Flaticon.woff2") format("woff2"),
        url("./Flaticon.woff") format("woff"),
        url("./Flaticon.ttf") format("truetype"),
        url("./Flaticon.svg#Flaticon") format("svg");
@@ -24,16 +25,14 @@
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
 [class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
   font-family: Flaticon;
-        font-size: 20px;
+        font-size: 25px;
 font-style: normal;
-margin-left: 20px;
+margin-left: 2px;
 }
 
-.flaticon-home:before { content: "\f100"; }
-.flaticon-businessman:before { content: "\f101"; }
-.flaticon-bank:before { content: "\f102"; }
-.flaticon-manager:before { content: "\f103"; }
-.flaticon-clerk-with-tie:before { content: "\f104"; }
-.flaticon-list-on-a-clipboard:before { content: "\f105"; }
-.flaticon-box-package-on-a-cart:before { content: "\f106"; }
-.flaticon-commerce:before { content: "\f107"; }
+.flaticon-Product:before { content: "\f100"; }
+.flaticon-Staff:before { content: "\f101"; }
+.flaticon-menu-lines:before { content: "\f102"; }
+.flaticon-Home:before { content: "\f103"; }
+.flaticon-Envelope:before { content: "\f104"; }
+.flaticon-Message:before { content: "\f105"; }
