--- a/InventoryManagementUI/Views/Company/Index.cshtml
+++ b/InventoryManagementUI/Views/Company/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="col-sm-6 col-xl-3">
         <div class="bg-info rounded overflow-hidden">
             <div class="pd-x-20 pd-t-20 d-flex align-items-center">
-                <i class="ion ion-earth tx-60 lh-0 tx-white op-7"></i>
+                <i class="flaticon-Staff"></i>
                 <div class="mg-l-20">
                     <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Staff</p>
                     <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@Model.Count()</p>
@@ -20,7 +20,7 @@
     <div class="col-sm-6 col-xl-3 mg-t-20 mg-sm-t-0">
         <div class="bg-purple rounded overflow-hidden">
             <div class="pd-x-20 pd-t-20 d-flex align-items-center">
-                <i class="ion ion-bag tx-60 lh-0 tx-white op-7"></i>
+                <i class="flaticon-manager"></i>
                 <div class="mg-l-20">
                     <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Product</p>
                     <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@ViewBag.ProductCount</p>
@@ -84,8 +84,8 @@
                         <td>@staff.Department</td>
                         <td>@staff.Task</td>
                         <td>@staff.Phone</td>
-                        <td>Edit</td>
-                        <td>Delete</td>
+                        <td>@Html.ActionLink("Edit", "StaffEdit", "Company", new { staff.Id }, new { @class = "btn btn-teal" })</td>
+                        <td>@Html.ActionLink("Delete", "StaffDelete", "Company", new { staff.Id }, new { @class = "btn btn-danger" })</td>
                     </tr>
                 }
 
