--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -15,7 +15,7 @@
     <!-- Meta -->
     <meta name="description" content=".">
     <meta name="author" content="">
-    <title>InventoryManagement</title>
+    <title>@ViewBag.Title | InventoryManagement</title>
     <!-- vendor css -->
     <link href="~/Content/lib/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="~/Content/lib/Ionicons/css/ionicons.css" rel="stylesheet">
