--- a/InventoryManagementUI/Views/Menu/Menus.cshtml
+++ b/InventoryManagementUI/Views/Menu/Menus.cshtml
@@ -4,13 +4,13 @@
 
 @foreach (var menu in Model)
 {
-
+    ct
 
 
     <li class="br-menu-item">
         <a href="@menu.Link" class="br-menu-link">
             <i class="flaticon-@menu.Name icon icon-24 tx-28"></i>
-            <span class="menu-item-label tx-18">@menu.Name</span>
+            <span class="menu-item-label tx-18" style="color:azure;">@menu.Name</span>
         </a>
         <!-- br-menu-link-->
 
