--- a/InventoryManagementUI/Views/Company/Staff.cshtml
+++ b/InventoryManagementUI/Views/Company/Staff.cshtml
@@ -1,63 +1,8 @@
 ﻿@model IEnumerable<InventoryManagementEntity.Staff>
 @{
-    ViewBag.Title = "Home";
+    ViewBag.Title = "Staff";
     Layout = "~/Views/Shared/_CompanyLayout.cshtml";
 }
-
-<div class="row row-sm mg-b-20">
-    <div class="col-sm-6 col-xl-3">
-        <div class="bg-info rounded overflow-hidden">
-            <div class="pd-x-20 pd-t-20 d-flex align-items-center">
-                <i></i>
-                <div class="mg-l-20">
-                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Staff</p>
-                    <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@Model.Count()</p>
-                    <span class="tx-11 tx-roboto tx-white-8"></span>
-                </div>
-            </div>
-            <div id="ch1" class="ht-50 tr-y-1 rickshaw_graph"></div>
-        </div>
-    </div><!-- col-3 -->
-    <div class="col-sm-6 col-xl-3 mg-t-20 mg-sm-t-0">
-        <div class="bg-purple rounded overflow-hidden">
-            <div class="pd-x-20 pd-t-20 d-flex align-items-center">
-                <i class="flaticon-manager"></i>
-                <div class="mg-l-20">
-                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Product</p>
-                    <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@ViewBag.ProductCount</p>
-                    <span class="tx-11 tx-roboto tx-white-8"></span>
-                </div>
-            </div>
-            <div id="ch3" class="ht-50 tr-y-1 rickshaw_graph"></div>
-        </div>
-    </div><!-- col-3 -->
-    <div class="col-sm-6 col-xl-3 mg-t-20 mg-xl-t-0">
-        <div class="bg-teal rounded overflow-hidden">
-            <div class="pd-x-20 pd-t-20 d-flex align-items-center">
-                <i class="ion ion-monitor tx-60 lh-0 tx-white op-7"></i>
-                <div class="mg-l-20">
-                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">All Product</p>
-                    <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">54.45%</p>
-                    <span class="tx-11 tx-roboto tx-white-8"></span>
-                </div>
-            </div>
-            <div id="ch2" class="ht-50 tr-y-1 rickshaw_graph"></div>
-        </div>
-    </div><!-- col-3 -->
-    <div class="col-sm-6 col-xl-3 mg-t-20 mg-xl-t-0">
-        <div class="bg-primary rounded overflow-hidden">
-            <div class="pd-x-20 pd-t-20 d-flex align-items-center">
-                <i class="ion ion-clock tx-60 lh-0 tx-white op-7"></i>
-                <div class="mg-l-20">
-                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Sold product</p>
-                    <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">32.16%</p>
-                    <span class="tx-11 tx-roboto tx-white-8"></span>
-                </div>
-            </div>
-            <div id="ch4" class="ht-50 tr-y-1 rickshaw_graph"></div>
-        </div>
-    </div><!-- col-3 -->
-</div>
 
 <div class="br-section-wrapper">
     <h6 class="br-section-label">Staff DataTable</h6> <div class="w-25">@Html.ActionLink("Create New Staff", "CreateStaff", "Company", new { @class = "btn btn-success" })</div>
