--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -37,7 +37,7 @@
 </head>
 <body>
     <!-- ########## START: LEFT PANEL ########## -->
-    <div class="br-logo"><a href="#">InventoryManagement</a></div>
+    <div class="br-logo"><a href="#">[InventoryManagement]</a></div>
     <div class="br-sideleft overflow-y-auto">
         <label class="sidebar-label pd-x-10 mg-t-20">Navigation</label>
         <ul class="br-sideleft-menu">
