--- a/InventoryManagementUI/Views/Menu/Menus.cshtml
+++ b/InventoryManagementUI/Views/Menu/Menus.cshtml
@@ -4,11 +4,11 @@
 
 @foreach (var menu in Model)
 {
-    ct
+    
 
 
     <li class="br-menu-item">
-        <a href="@menu.Link" class="br-menu-link">
+        <a href="~/Company/@menu.Link" class="br-menu-link">
             <i class="flaticon-@menu.Name icon icon-24 tx-28"></i>
             <span class="menu-item-label tx-18" style="color:azure;">@menu.Name</span>
         </a>
