--- a/InventoryManagementUI/Views/Company/EditStaff.cshtml
+++ b/InventoryManagementUI/Views/Company/EditStaff.cshtml
@@ -91,7 +91,7 @@
                 </div><!-- row -->
 
                 <div class="form-layout-footer">
-                    <button type="submit" name="Id" value="@Model.Id">Create </button>
+                    <button type="submit" name="Id" class="btn btn-primary" value="@Model.Id">Update </button>
                     <input type="reset" name="rsbt" class="btn btn-default" value="clear" />
 
                 </div><!-- form-layout-footer -->
