--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -37,7 +37,8 @@
 </head>
 <body>
     <!-- ########## START: LEFT PANEL ########## -->
-    <div class="br-logo"><a href="#">[InventoryManagement]</a></div>
+    <div class="br-logo"> <a href="#"><span>[</span>Inventory <i>Management</i><span>]</span></a></div>
+   
     <div class="br-sideleft overflow-y-auto">
         <label class="sidebar-label pd-x-10 mg-t-20">Navigation</label>
         <ul class="br-sideleft-menu">
@@ -491,11 +492,11 @@
     <!-- ########## END: RIGHT PANEL ########## --->
     <!-- ########## START: MAIN PANEL ########## -->
     <div class="br-mainpanel">
-      
+
         <div class="br-pagetitle">
-           
+
             <div>
-              
+
             </div>
         </div><!-- d-flex -->
         <div class="br-pagebody">
