--- a/InventoryManagementUI/Views/Company/Index.cshtml
+++ b/InventoryManagementUI/Views/Company/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="pd-x-20 pd-t-20 d-flex align-items-center">
                 <i></i>
                 <div class="mg-l-20">
-                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Staff</p>
+                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Staffs</p>
                     <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@Model.Count()</p>
                     <span class="tx-11 tx-roboto tx-white-8"></span>
                 </div>
@@ -23,7 +23,7 @@
             <div class="pd-x-20 pd-t-20 d-flex align-items-center">
                 <i class="flaticon-manager"></i>
                 <div class="mg-l-20">
-                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Product</p>
+                    <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Products</p>
                     <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@ViewBag.ProductCount</p>
                     <span class="tx-11 tx-roboto tx-white-8"></span>
                 </div>
