--- a/InventoryManagementUI/Views/Menu/Menus.cshtml
+++ b/InventoryManagementUI/Views/Menu/Menus.cshtml
@@ -10,7 +10,7 @@
     <li class="br-menu-item">
         <a href="~/Company/@menu.Link" class="br-menu-link">
             <i class="flaticon-@menu.Name icon icon-24 tx-28"></i>
-            <span class="menu-item-label tx-18" style="color:azure;">@menu.Name</span>
+            <span class="menu-item-label tx-18" style="color:azure; font-size:20px;">@menu.Name</span>
         </a>
         <!-- br-menu-link-->
 
