--- a/InventoryManagementUI/Views/Company/Product.cshtml
+++ b/InventoryManagementUI/Views/Company/Product.cshtml
@@ -10,8 +10,8 @@
         <table id="datatable1" class="table display responsive nowrap dataTable no-footer dtr-inline" role="grid" aria-describedby="datatable1_info" style="width: 935px;">
             <thead>
                 <tr role="row">
-                    <th class="wd-15p sorting_asc" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 112px;" aria-sort="ascending" aria-label="First name: activate to sort column descending">Name</th>
-                    <th class="wd-15p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 113px;" aria-label="Last name: activate to sort column ascending">BarcodeCode</th>
+                    <th class="wd-15p sorting_asc" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 112px;" aria-sort="ascending" aria-label="First name: activate to sort column descending">BarcodeCode</th>
+                   
                     <th class="wd-20p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 175px;" aria-label="Position: activate to sort column ascending">ProductName</th>
                     <th class="wd-15p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 114px;" aria-label="Start date: activate to sort column ascending">Pieces</th>
                     <th class="wd-10p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 69px;" aria-label="Salary: activate to sort column ascending">Price</th>
@@ -24,7 +24,7 @@
                 @foreach (var Product in Model)
                 {
                 <tr role="row" class="odd">
-                    <td>@Product.ProductName</td>
+                   
 
                     <td class="sorting_1" tabindex="0">@Product.BarcodeCode</td>
                     <td>@Product.ProductName</td>
