--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -29,6 +29,7 @@
     <link href="~/Content/lib/select2/css/select2.min.css" rel="stylesheet">
     <!--Icon-->
 
+
     <link href="~/Content/fontIcon/flaticon.css" rel="stylesheet" />
 
     <!-- Bracket CSS -->
@@ -100,8 +101,8 @@
     <!-- ########## START: HEAD PANEL ########## -->
     <div class="br-header">
         <div class="br-header-left">
-            <div class="navicon-left hidden-md-down"><a id="btnLeftMenu" href="#"><i class="flaticon-menu-lines"></i></a></div>
-            <div class="navicon-left hidden-lg-up"><a id="btnLeftMenuMobile" href="#"><i class="flaticon-menu-lines"></i></a></div>
+            <div class="navicon-left hidden-md-down"><a id="btnLeftMenu" href="#"><i class="flaticon-Menu"></i></a></div>
+            <div class="navicon-left hidden-lg-up"><a id="btnLeftMenuMobile" href="#"><i class="flaticon-Menu"></i></a></div>
             <div class="input-group hidden-xs-down wd-170 transition">
                 <input id="searchbox" type="text" class="form-control" placeholder="Search">
                 <span class="input-group-btn">
