--- a/InventoryManagementUI/Views/Company/Index.cshtml
+++ b/InventoryManagementUI/Views/Company/Index.cshtml
@@ -50,7 +50,7 @@
     <div class="col-sm-6 col-xl-3 mg-t-20 mg-xl-t-0">
         <div class="bg-primary rounded overflow-hidden">
             <div class="pd-x-20 pd-t-20 d-flex align-items-center">
-                <i class="ion ion-clock tx-60 lh-0 tx-white op-7"></i>
+                <i><img src="~/Content/img/Icon/warehouse.png" width="64" height="64" /></i>
                 <div class="mg-l-20">
                     <p class="tx-10 tx-spacing-1 tx-mont tx-semibold tx-uppercase tx-white-8 mg-b-10">Number Of Items in Stock</p>
                     <p class="tx-24 tx-white tx-lato tx-bold mg-b-0 lh-1">@ViewBag.Nois</p>
@@ -63,7 +63,7 @@
 </div>
 
 <div class="br-section-wrapper">
-    <h6 class="br-section-label">Staff DataTable</h6> <div class="w-25">@Html.ActionLink("Create New Staff", "CreateStaff", "Company", new { @class = "btn btn-success" })</div>
+     <h6 class="br-section-label">Staff DataTable</h6> @Html.ActionLink("Create New Staff", "CreateStaff", "Company", new { @class = "btn btn-success" })
     <div class="table-wrapper">
         <table id="datatable1" class="table display responsive nowrap dataTable no-footer dtr-inline" role="grid" aria-describedby="datatable1_info" style="width: 935px;">
             <thead>
