--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -103,13 +103,15 @@
         <div class="br-header-left">
             <div class="navicon-left hidden-md-down"><a id="btnLeftMenu" href="#"><i class="flaticon-Menu"></i></a></div>
             <div class="navicon-left hidden-lg-up"><a id="btnLeftMenuMobile" href="#"><i class="flaticon-Menu"></i></a></div>
-            <div class="input-group hidden-xs-down wd-170 transition">
-                <input id="searchbox" type="text" class="form-control" placeholder="Search">
-                <span class="input-group-btn">
-                    <button class="btn btn-secondary" type="button"><i class="fa fa-search"></i></button>
-                </span>
-            </div><!-- input-group -->
+
         </div>
+
+        <div class="input-group hidden-xs-down mg-10 transition">
+
+            <span style="color:azure; border:double 1px azure; padding:5px; font-family:'Times New Roman', Times, serif; font-size:medium;">  @DateTime.Today.ToLongDateString()</span>
+
+
+        </div><!-- input-group -->
     </div><!-- br-header -->
     <!-- ########## END: HEAD PANEL ########## -->
     <!-- ########## START: RIGHT PANEL ########## -->
