DetailProduct Page Print & Barcode+

--- a/InventoryManagementUI/Views/Company/CreateStaff.cshtml
+++ b/InventoryManagementUI/Views/Company/CreateStaff.cshtml
@@ -68,7 +68,7 @@
                 <div class="col-lg-4">
                     <div class="form-group mg-b-10-force">
                         <label class="form-control-label">Password: <span class="tx-danger">*</span></label>
-                        <input class="form-control form-control-dark" type="password" required maxlength="50" name="Password" value="" placeholder="Enter Password">
+                        <input class="form-control form-control-dark" type="password" required maxlength="50" MinLength="6" name="Password" value="" placeholder="Enter Password">
                     </div>
                 </div><!-- col-4 -->
                 <!-- col-4
