--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -521,7 +521,7 @@
     </div><!-- br-mainpanel -->
     <!-- ########## END: MAIN PANEL ########## -->
 
-    
+
     <script src="~/Content/lib/jquery/jquery.js"></script>
     <script src="~/Content/lib/popper.js/popper.js"></script>
     <script src="~/Content/lib/bootstrap/bootstrap.js"></script>
@@ -535,7 +535,21 @@
     <script src="~/Content/lib/datatables-responsive/dataTables.responsive.js"></script>
     <script src="~/Content/lib/select2/js/select2.min.js"></script>
     <script src="~/Content/js/bracket.js"></script>
+
+    <!-- ########## DetailProduct Page Barcode ########## -->
+    <script src="~/Content/js/BarcodeJs/JsBarcode.js"></script>
+
     <script>
+        JsBarcode(".barcode").init();
+        /*DetailProduct Page Print*/
+        function printDiv(DivPrint) {
+            var printContents = document.getElementById(DivPrint).innerHTML;
+            var originalContents = document.body.innerHTML;
+            document.body.innerHTML = printContents;
+            window.print();
+            document.body.innerHTML = originalContents;
+        }
+
         $(function () {
             'use strict';
 
